KJHH-1167: Fix overlapping select options in kaytto-oikeusanomukset page

--- a/src/main/static/src/components/anomus/HaetutKayttooikeusRyhmatHakuForm.css
+++ b/src/main/static/src/components/anomus/HaetutKayttooikeusRyhmatHakuForm.css
@@ -11,3 +11,8 @@
 .haetut-kayttooikeusryhmat-close-button {
     margin-left: 10px;
 }
+
+.large-kayttooikeus-filter {
+    min-width: 400px;
+    max-width: 800px;
+}
